Assets/Scripts/custom_Interpreter/ANTLR/SimpleParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Simple.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SimpleParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, PUBLIC=47, PRIVATE=48, VOID=49, IF=50, ELSE=51, WHILE=52, FOR=53, 
		RETURN=54, BREAK=55, CONTINUE=56, NEW=57, DO=58, SWITCH=59, CASE=60, DEFAULT=61, 
		TRUE=62, FALSE=63, NULL=64, INT_TYPE=65, LONG_TYPE=66, DOUBLE_TYPE=67, 
		FLOAT_TYPE=68, SHORT_TYPE=69, BYTE_TYPE=70, BOOLEAN_TYPE=71, CHAR_TYPE=72, 
		STRING_TYPE=73, PRINTLN=74, PRINT=75, DOUBLE=76, FLOAT=77, LONG=78, INT=79, 
		CHAR=80, STRING=81, ID=82, LINE_COMMENT=83, BLOCK_COMMENT=84, WS=85;
	public const int
		RULE_program = 0, RULE_topLevelItem = 1, RULE_functionDeclaration = 2, 
		RULE_accessModifier = 3, RULE_returnType = 4, RULE_parameterList = 5, 
		RULE_parameter = 6, RULE_block = 7, RULE_blockItem = 8, RULE_statement = 9, 
		RULE_expressionStatement = 10, RULE_variableDeclaration = 11, RULE_variableDeclarator = 12, 
		RULE_variableDeclaratorId = 13, RULE_type = 14, RULE_baseType = 15, RULE_arrayDimensions = 16, 
		RULE_expression = 17, RULE_assignmentExpression = 18, RULE_assignmentTarget = 19, 
		RULE_assignmentOperator = 20, RULE_conditionalExpression = 21, RULE_logicalOrExpression = 22, 
		RULE_logicalAndExpression = 23, RULE_bitwiseOrExpression = 24, RULE_bitwiseXorExpression = 25, 
		RULE_bitwiseAndExpression = 26, RULE_equalityExpression = 27, RULE_relationalExpression = 28, 
		RULE_shiftExpression = 29, RULE_additiveExpression = 30, RULE_multiplicativeExpression = 31, 
		RULE_unaryExpression = 32, RULE_postfixExpression = 33, RULE_primaryExpression = 34, 
		RULE_functionCall = 35, RULE_argumentList = 36, RULE_qualifiedName = 37, 
		RULE_arrayCreation = 38, RULE_arrayCreationDimensions = 39, RULE_arrayDimension = 40, 
		RULE_arrayInitializer = 41, RULE_expressionList = 42, RULE_arrayAccess = 43, 
		RULE_printStatement = 44, RULE_returnStatement = 45, RULE_breakStatement = 46, 
		RULE_continueStatement = 47, RULE_ifBlock = 48, RULE_whileBlock = 49, 
		RULE_forBlock = 50, RULE_forInit = 51, RULE_variableDeclarationNoSemicolon = 52, 
		RULE_forUpdate = 53, RULE_forEachBlock = 54, RULE_doWhileBlock = 55, RULE_switchBlock = 56, 
		RULE_switchCase = 57, RULE_defaultCase = 58, RULE_literal = 59;
	public static readonly string[] ruleNames = {
		"program", "topLevelItem", "functionDeclaration", "accessModifier", "returnType", 
		"parameterList", "parameter", "block", "blockItem", "statement", "expressionStatement", 
		"variableDeclaration", "variableDeclarator", "variableDeclaratorId", "type", 
		"baseType", "arrayDimensions", "expression", "assignmentExpression", "assignmentTarget", 
		"assignmentOperator", "conditionalExpression", "logicalOrExpression", 
		"logicalAndExpression", "bitwiseOrExpression", "bitwiseXorExpression", 
		"bitwiseAndExpression", "equalityExpression", "relationalExpression", 
		"shiftExpression", "additiveExpression", "multiplicativeExpression", "unaryExpression", 
		"postfixExpression", "primaryExpression", "functionCall", "argumentList", 
		"qualifiedName", "arrayCreation", "arrayCreationDimensions", "arrayDimension", 
		"arrayInitializer", "expressionList", "arrayAccess", "printStatement", 
		"returnStatement", "breakStatement", "continueStatement", "ifBlock", "whileBlock", 
		"forBlock", "forInit", "variableDeclarationNoSemicolon", "forUpdate", 
		"forEachBlock", "doWhileBlock", "switchBlock", "switchCase", "defaultCase", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "','", "'{'", "'}'", "';'", "'='", "'['", "']'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", "'>>='", 
		"'>>>='", "'?'", "':'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", "'!='", 
		"'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'>>>'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'!'", "'~'", "'++'", "'--'", "'.'", "'public'", "'private'", 
		"'void'", "'if'", "'else'", "'while'", "'for'", "'return'", "'break'", 
		"'continue'", "'new'", "'do'", "'switch'", "'case'", "'default'", "'true'", 
		"'false'", "'null'", "'int'", "'long'", "'double'", "'float'", "'short'", 
		"'byte'", "'boolean'", "'char'", "'String'", "'System.out.println'", "'System.out.print'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "PUBLIC", 
		"PRIVATE", "VOID", "IF", "ELSE", "WHILE", "FOR", "RETURN", "BREAK", "CONTINUE", 
		"NEW", "DO", "SWITCH", "CASE", "DEFAULT", "TRUE", "FALSE", "NULL", "INT_TYPE", 
		"LONG_TYPE", "DOUBLE_TYPE", "FLOAT_TYPE", "SHORT_TYPE", "BYTE_TYPE", "BOOLEAN_TYPE", 
		"CHAR_TYPE", "STRING_TYPE", "PRINTLN", "PRINT", "DOUBLE", "FLOAT", "LONG", 
		"INT", "CHAR", "STRING", "ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Simple.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SimpleParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SimpleParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SimpleParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SimpleParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext[] topLevelItem() {
			return GetRuleContexts<TopLevelItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext topLevelItem(int i) {
			return GetRuleContext<TopLevelItemContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleVisitor<TResult> typedVisitor = visitor as ISimpleVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -3461090668108054510L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 524287L) != 0)) {
				{
				{
				State = 120;
				topLevelItem();
				}
				}
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 126;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfBlockContext ifBlock() {
			return GetRuleContext<IfBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WhileBlockContext whileBlock() {
			return GetRuleContext<WhileBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForBlockContext forBlock() {
			return GetRuleContext<ForBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ForEachBlockContext forEachBlock() {
			return GetRuleContext<ForEachBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DoWhileBlockContext doWhileBlock() {
			return GetRuleContext<DoWhileBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SwitchBlockContext switchBlock() {
			return GetRuleContext<SwitchBlockContext>(0);
		}
		public TopLevelItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.EnterTopLevelItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.ExitTopLevelItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleVisitor<TResult> typedVisitor = visitor as ISimpleVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopLevelItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelItemContext topLevelItem() {
		TopLevelItemContext _localctx = new TopLevelItemContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelItem);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 128;
				functionDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 129;
				statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 130;
				ifBlock();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 131;
				whileBlock();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 132;
				forBlock();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 133;
				forEachBlock();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 134;
				doWhileBlock();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 135;
				switchBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ReturnTypeContext returnType() {
			return GetRuleContext<ReturnTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(SimpleParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AccessModifierContext accessModifier() {
			return GetRuleContext<AccessModifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.EnterFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.ExitFunctionDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleVisitor<TResult> typedVisitor = visitor as ISimpleVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDeclarationContext functionDeclaration() {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				State = 138;
				accessModifier();
				}
			}

			State = 141;
			returnType();
			State = 142;
			Match(ID);
			State = 143;
			Match(T__0);
			State = 145;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & 511L) != 0)) {
				{
				State = 144;
				parameterList();
				}
			}

			State = 147;
			Match(T__1);
			State = 148;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AccessModifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PUBLIC() { return GetToken(SimpleParser.PUBLIC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PRIVATE() { return GetToken(SimpleParser.PRIVATE, 0); }
		public AccessModifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_accessModifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.EnterAccessModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.ExitAccessModifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleVisitor<TResult> typedVisitor = visitor as ISimpleVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAccessModifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AccessModifierContext accessModifier() {
		AccessModifierContext _localctx = new AccessModifierContext(Context, State);
		EnterRule(_localctx, 6, RULE_accessModifier);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 150;
			_la = TokenStream.LA(1);
			if ( !(_la==PUBLIC || _la==PRIVATE) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(SimpleParser.VOID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ReturnTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.EnterReturnType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISimpleListener typedListener = listener as ISimpleListener;
			if (typedListener != null) typedListener.ExitReturnType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISimpleVisitor<TResult> typedVisitor = visitor as ISimpleVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnType(this);
			else return visitor.VisitChildren(this);
		}
	}
